out/production/JFJCompiler/TP2/BYACC/y.output
   0  $accept : program $end

   1  $$1 :

   2  program : PROGRAM ID ';' $$1 declaracion cuerpo_programa

   3  $$2 :

   4  program : PROGRAM ID ';' $$2 cuerpo_programa
   5          | PROGRAM ';' declaracion cuerpo_programa
   6          | PROGRAM ';' cuerpo_programa
   7          | declaracion cuerpo_programa
   8          | cuerpo_programa

   9  cuerpo_programa : BEGIN sentencia_ejec END ';'

  10  bloque_sentencias : BEGIN sentencia_ejec END ';'
  11                    | miembro_sentencia_ejec

  12  tipo_id : UINT
  13          | DOUBLE
  14          | FUNC

  15  cuerpo_func : BEGIN sentencia_ejec RETURN retorno END
  16              | BEGIN sentencia_ejec RETURN retorno post_condicion END
  17              | BEGIN sentencia_ejec RETURN END
  18              | BEGIN sentencia_ejec RETURN post_condicion END
  19              | BEGIN sentencia_ejec RETURN ';' END
  20              | BEGIN sentencia_ejec RETURN ';' post_condicion END

  21  post_condicion : POST ':' condicion ',' CADENA ';'
  22                 | POST ':' condicion ',' ';'

  23  retorno : '(' expresion ')' ';'

  24  $$3 :

  25  declaracion : FUNC tipo_id nombre_func params_func definicion_func ';' $$3
  26              | tipo_id lista_variables ';'
  27              | tipo_id lista_variables ';' declaracion

  28  $$4 :

  29  declaracion : FUNC tipo_id nombre_func params_func definicion_func ';' $$4 declaracion
  30              | lista_variables ';'
  31              | lista_variables ';' declaracion

  32  lista_variables : ID
  33                  | ID ',' lista_variables

  34  nombre_func : ID

  35  params_func : '(' param ')'
  36              | '(' ')'

  37  param : tipo_id ID

  38  definicion_func : declaracion cuerpo_func
  39                  | cuerpo_func
  40                  |

  41  sentencia_ejec : miembro_sentencia_ejec sentencia_ejec
  42                 | miembro_sentencia_ejec

  43  miembro_sentencia_ejec : invocacion ';'
  44                         | asignacion ';'
  45                         | iteracion ';'
  46                         | seleccion ';'
  47                         | impresion ';'
  48                         | BREAK ';'
  49                         | seleccion miembro_sentencia_ejec
  50                         | invocacion miembro_sentencia_ejec
  51                         | asignacion miembro_sentencia_ejec
  52                         | iteracion miembro_sentencia_ejec
  53                         | impresion miembro_sentencia_ejec
  54                         | BREAK miembro_sentencia_ejec

  55  invocacion : ID '(' ')'
  56             | ID '(' ID ')'

  57  asignacion : ID ASIG expresion
  58             | ID ASIG error
  59             | ID
  60             | error ASIG expresion

  61  expresion : expresion '+' termino
  62            | expresion '-' termino
  63            | termino

  64  termino : termino '*' factor
  65          | termino '/' factor
  66          | factor

  67  factor : ID
  68         | CTE_UINT
  69         | CTE_DOUBLE
  70         | '-' factor
  71         | invocacion
  72         | ERR_CTE_FUERA_RANGO
  73         | ERR_FORMATO_CTE

  74  impresion : PRINT '(' CADENA ')'
  75            | PRINT '(' error ')'

  76  iteracion : encabezado_iteracion bloque_sentencias UNTIL condicion
  77            | encabezado_iteracion bloque_sentencias

  78  encabezado_iteracion : REPEAT

  79  condicion : '(' expresion comparador expresion ')'
  80            | '(' expresion comparador expresion
  81            | '(' comparador expresion ')'
  82            | '(' expresion comparador ')'
  83            | '(' expresion operador_logico expresion ')'
  84            | '(' error ')'

  85  comparador : COMP_MAYOR_IGUAL
  86             | COMP_MENOR_IGUAL
  87             | '<'
  88             | '>'
  89             | COMP_IGUAL
  90             | COMP_DISTINTO

  91  operador_logico : AND
  92                  | OR

  93  seleccion : encabezado_if rama_then ENDIF
  94            | encabezado_if rama_then rama_else ENDIF

  95  encabezado_if : IF condicion
  96                | IF

  97  rama_then : THEN bloque_sentencias
  98            | THEN

  99  rama_else : ELSE bloque_sentencias
 100            | ELSE

state 0
	$accept : . program $end  (0)

	PROGRAM  shift 1
	UINT  shift 2
	DOUBLE  shift 3
	BEGIN  shift 4
	ID  shift 5
	FUNC  shift 6
	.  error

	program  goto 7
	declaracion  goto 8
	cuerpo_programa  goto 9
	tipo_id  goto 10
	lista_variables  goto 11


state 1
	program : PROGRAM . ID ';' $$1 declaracion cuerpo_programa  (2)
	program : PROGRAM . ID ';' $$2 cuerpo_programa  (4)
	program : PROGRAM . ';' declaracion cuerpo_programa  (5)
	program : PROGRAM . ';' cuerpo_programa  (6)

	ID  shift 12
	';'  shift 13
	.  error


state 2
	tipo_id : UINT .  (12)

	.  reduce 12


state 3
	tipo_id : DOUBLE .  (13)

	.  reduce 13


state 4
	cuerpo_programa : BEGIN . sentencia_ejec END ';'  (9)

	error  shift 14
	ID  shift 15
	PRINT  shift 16
	REPEAT  shift 17
	IF  shift 18
	BREAK  shift 19
	.  error

	sentencia_ejec  goto 20
	miembro_sentencia_ejec  goto 21
	invocacion  goto 22
	asignacion  goto 23
	iteracion  goto 24
	seleccion  goto 25
	impresion  goto 26
	encabezado_iteracion  goto 27
	encabezado_if  goto 28


state 5
	lista_variables : ID .  (32)
	lista_variables : ID . ',' lista_variables  (33)

	','  shift 29
	';'  reduce 32


state 6
	tipo_id : FUNC .  (14)
	declaracion : FUNC . tipo_id nombre_func params_func definicion_func ';' $$3  (25)
	declaracion : FUNC . tipo_id nombre_func params_func definicion_func ';' $$4 declaracion  (29)

	UINT  shift 2
	DOUBLE  shift 3
	FUNC  shift 30
	ID  reduce 14

	tipo_id  goto 31


state 7
	$accept : program . $end  (0)

	$end  accept


state 8
	program : declaracion . cuerpo_programa  (7)

	BEGIN  shift 4
	.  error

	cuerpo_programa  goto 32


state 9
	program : cuerpo_programa .  (8)

	.  reduce 8


state 10
	declaracion : tipo_id . lista_variables ';'  (26)
	declaracion : tipo_id . lista_variables ';' declaracion  (27)

	ID  shift 5
	.  error

	lista_variables  goto 33


state 11
	declaracion : lista_variables . ';'  (30)
	declaracion : lista_variables . ';' declaracion  (31)

	';'  shift 34
	.  error


state 12
	program : PROGRAM ID . ';' $$1 declaracion cuerpo_programa  (2)
	program : PROGRAM ID . ';' $$2 cuerpo_programa  (4)

	';'  shift 35
	.  error


state 13
	program : PROGRAM ';' . declaracion cuerpo_programa  (5)
	program : PROGRAM ';' . cuerpo_programa  (6)

	UINT  shift 2
	DOUBLE  shift 3
	BEGIN  shift 4
	ID  shift 5
	FUNC  shift 6
	.  error

	declaracion  goto 36
	cuerpo_programa  goto 37
	tipo_id  goto 10
	lista_variables  goto 11


state 14
	asignacion : error . ASIG expresion  (60)

	ASIG  shift 38
	.  error


state 15
	invocacion : ID . '(' ')'  (55)
	invocacion : ID . '(' ID ')'  (56)
	asignacion : ID . ASIG expresion  (57)
	asignacion : ID . ASIG error  (58)
	asignacion : ID .  (59)

	ASIG  shift 39
	'('  shift 40
	error  reduce 59
	ID  reduce 59
	PRINT  reduce 59
	REPEAT  reduce 59
	IF  reduce 59
	BREAK  reduce 59
	';'  reduce 59


state 16
	impresion : PRINT . '(' CADENA ')'  (74)
	impresion : PRINT . '(' error ')'  (75)

	'('  shift 41
	.  error


state 17
	encabezado_iteracion : REPEAT .  (78)

	.  reduce 78


state 18
	encabezado_if : IF . condicion  (95)
	encabezado_if : IF .  (96)

	'('  shift 42
	THEN  reduce 96

	condicion  goto 43


state 19
	miembro_sentencia_ejec : BREAK . ';'  (48)
	miembro_sentencia_ejec : BREAK . miembro_sentencia_ejec  (54)

	error  shift 14
	ID  shift 15
	PRINT  shift 16
	REPEAT  shift 17
	IF  shift 18
	BREAK  shift 19
	';'  shift 44
	.  error

	miembro_sentencia_ejec  goto 45
	invocacion  goto 22
	asignacion  goto 23
	iteracion  goto 24
	seleccion  goto 25
	impresion  goto 26
	encabezado_iteracion  goto 27
	encabezado_if  goto 28


state 20
	cuerpo_programa : BEGIN sentencia_ejec . END ';'  (9)

	END  shift 46
	.  error


state 21
	sentencia_ejec : miembro_sentencia_ejec . sentencia_ejec  (41)
	sentencia_ejec : miembro_sentencia_ejec .  (42)

	error  shift 14
	ID  shift 15
	PRINT  shift 16
	REPEAT  shift 17
	IF  shift 18
	BREAK  shift 19
	RETURN  reduce 42
	END  reduce 42

	sentencia_ejec  goto 47
	miembro_sentencia_ejec  goto 21
	invocacion  goto 22
	asignacion  goto 23
	iteracion  goto 24
	seleccion  goto 25
	impresion  goto 26
	encabezado_iteracion  goto 27
	encabezado_if  goto 28


state 22
	miembro_sentencia_ejec : invocacion . ';'  (43)
	miembro_sentencia_ejec : invocacion . miembro_sentencia_ejec  (50)

	error  shift 14
	ID  shift 15
	PRINT  shift 16
	REPEAT  shift 17
	IF  shift 18
	BREAK  shift 19
	';'  shift 48
	.  error

	miembro_sentencia_ejec  goto 49
	invocacion  goto 22
	asignacion  goto 23
	iteracion  goto 24
	seleccion  goto 25
	impresion  goto 26
	encabezado_iteracion  goto 27
	encabezado_if  goto 28


state 23
	miembro_sentencia_ejec : asignacion . ';'  (44)
	miembro_sentencia_ejec : asignacion . miembro_sentencia_ejec  (51)

	error  shift 14
	ID  shift 15
	PRINT  shift 16
	REPEAT  shift 17
	IF  shift 18
	BREAK  shift 19
	';'  shift 50
	.  error

	miembro_sentencia_ejec  goto 51
	invocacion  goto 22
	asignacion  goto 23
	iteracion  goto 24
	seleccion  goto 25
	impresion  goto 26
	encabezado_iteracion  goto 27
	encabezado_if  goto 28


state 24
	miembro_sentencia_ejec : iteracion . ';'  (45)
	miembro_sentencia_ejec : iteracion . miembro_sentencia_ejec  (52)

	error  shift 14
	ID  shift 15
	PRINT  shift 16
	REPEAT  shift 17
	IF  shift 18
	BREAK  shift 19
	';'  shift 52
	.  error

	miembro_sentencia_ejec  goto 53
	invocacion  goto 22
	asignacion  goto 23
	iteracion  goto 24
	seleccion  goto 25
	impresion  goto 26
	encabezado_iteracion  goto 27
	encabezado_if  goto 28


state 25
	miembro_sentencia_ejec : seleccion . ';'  (46)
	miembro_sentencia_ejec : seleccion . miembro_sentencia_ejec  (49)

	error  shift 14
	ID  shift 15
	PRINT  shift 16
	REPEAT  shift 17
	IF  shift 18
	BREAK  shift 19
	';'  shift 54
	.  error

	miembro_sentencia_ejec  goto 55
	invocacion  goto 22
	asignacion  goto 23
	iteracion  goto 24
	seleccion  goto 25
	impresion  goto 26
	encabezado_iteracion  goto 27
	encabezado_if  goto 28


state 26
	miembro_sentencia_ejec : impresion . ';'  (47)
	miembro_sentencia_ejec : impresion . miembro_sentencia_ejec  (53)

	error  shift 14
	ID  shift 15
	PRINT  shift 16
	REPEAT  shift 17
	IF  shift 18
	BREAK  shift 19
	';'  shift 56
	.  error

	miembro_sentencia_ejec  goto 57
	invocacion  goto 22
	asignacion  goto 23
	iteracion  goto 24
	seleccion  goto 25
	impresion  goto 26
	encabezado_iteracion  goto 27
	encabezado_if  goto 28


state 27
	iteracion : encabezado_iteracion . bloque_sentencias UNTIL condicion  (76)
	iteracion : encabezado_iteracion . bloque_sentencias  (77)

	error  shift 14
	BEGIN  shift 58
	ID  shift 15
	PRINT  shift 16
	REPEAT  shift 17
	IF  shift 18
	BREAK  shift 19
	.  error

	bloque_sentencias  goto 59
	miembro_sentencia_ejec  goto 60
	invocacion  goto 22
	asignacion  goto 23
	iteracion  goto 24
	seleccion  goto 25
	impresion  goto 26
	encabezado_iteracion  goto 27
	encabezado_if  goto 28


state 28
	seleccion : encabezado_if . rama_then ENDIF  (93)
	seleccion : encabezado_if . rama_then rama_else ENDIF  (94)

	THEN  shift 61
	.  error

	rama_then  goto 62


state 29
	lista_variables : ID ',' . lista_variables  (33)

	ID  shift 5
	.  error

	lista_variables  goto 63


state 30
	tipo_id : FUNC .  (14)

	.  reduce 14


state 31
	declaracion : FUNC tipo_id . nombre_func params_func definicion_func ';' $$3  (25)
	declaracion : FUNC tipo_id . nombre_func params_func definicion_func ';' $$4 declaracion  (29)

	ID  shift 64
	.  error

	nombre_func  goto 65


state 32
	program : declaracion cuerpo_programa .  (7)

	.  reduce 7


state 33
	declaracion : tipo_id lista_variables . ';'  (26)
	declaracion : tipo_id lista_variables . ';' declaracion  (27)

	';'  shift 66
	.  error


state 34
	declaracion : lista_variables ';' .  (30)
	declaracion : lista_variables ';' . declaracion  (31)

	UINT  shift 2
	DOUBLE  shift 3
	ID  shift 5
	FUNC  shift 6
	BEGIN  reduce 30

	declaracion  goto 67
	tipo_id  goto 10
	lista_variables  goto 11


state 35
	program : PROGRAM ID ';' . $$1 declaracion cuerpo_programa  (2)
	program : PROGRAM ID ';' . $$2 cuerpo_programa  (4)
	$$1 : .  (1)
	$$2 : .  (3)

	UINT  reduce 1
	DOUBLE  reduce 1
	BEGIN  reduce 3
	ID  reduce 1
	FUNC  reduce 1

	$$1  goto 68
	$$2  goto 69


state 36
	program : PROGRAM ';' declaracion . cuerpo_programa  (5)

	BEGIN  shift 4
	.  error

	cuerpo_programa  goto 70


state 37
	program : PROGRAM ';' cuerpo_programa .  (6)

	.  reduce 6


state 38
	asignacion : error ASIG . expresion  (60)

	ID  shift 71
	CTE_UINT  shift 72
	CTE_DOUBLE  shift 73
	ERR_CTE_FUERA_RANGO  shift 74
	ERR_FORMATO_CTE  shift 75
	'-'  shift 76
	.  error

	expresion  goto 77
	invocacion  goto 78
	termino  goto 79
	factor  goto 80


state 39
	asignacion : ID ASIG . expresion  (57)
	asignacion : ID ASIG . error  (58)

	error  shift 81
	ID  shift 71
	CTE_UINT  shift 72
	CTE_DOUBLE  shift 73
	ERR_CTE_FUERA_RANGO  shift 74
	ERR_FORMATO_CTE  shift 75
	'-'  shift 76
	.  error

	expresion  goto 82
	invocacion  goto 78
	termino  goto 79
	factor  goto 80


state 40
	invocacion : ID '(' . ')'  (55)
	invocacion : ID '(' . ID ')'  (56)

	ID  shift 83
	')'  shift 84
	.  error


state 41
	impresion : PRINT '(' . CADENA ')'  (74)
	impresion : PRINT '(' . error ')'  (75)

	error  shift 85
	CADENA  shift 86
	.  error


state 42
	condicion : '(' . expresion comparador expresion ')'  (79)
	condicion : '(' . expresion comparador expresion  (80)
	condicion : '(' . comparador expresion ')'  (81)
	condicion : '(' . expresion comparador ')'  (82)
	condicion : '(' . expresion operador_logico expresion ')'  (83)
	condicion : '(' . error ')'  (84)

	error  shift 87
	ID  shift 71
	CTE_UINT  shift 72
	CTE_DOUBLE  shift 73
	COMP_MAYOR_IGUAL  shift 88
	COMP_MENOR_IGUAL  shift 89
	COMP_IGUAL  shift 90
	COMP_DISTINTO  shift 91
	ERR_CTE_FUERA_RANGO  shift 74
	ERR_FORMATO_CTE  shift 75
	'-'  shift 76
	'<'  shift 92
	'>'  shift 93
	.  error

	expresion  goto 94
	invocacion  goto 78
	termino  goto 79
	factor  goto 80
	comparador  goto 95


state 43
	encabezado_if : IF condicion .  (95)

	.  reduce 95


state 44
	miembro_sentencia_ejec : BREAK ';' .  (48)

	.  reduce 48


state 45
	miembro_sentencia_ejec : BREAK miembro_sentencia_ejec .  (54)

	.  reduce 54


state 46
	cuerpo_programa : BEGIN sentencia_ejec END . ';'  (9)

	';'  shift 96
	.  error


state 47
	sentencia_ejec : miembro_sentencia_ejec sentencia_ejec .  (41)

	.  reduce 41


state 48
	miembro_sentencia_ejec : invocacion ';' .  (43)

	.  reduce 43


state 49
	miembro_sentencia_ejec : invocacion miembro_sentencia_ejec .  (50)

	.  reduce 50


state 50
	miembro_sentencia_ejec : asignacion ';' .  (44)

	.  reduce 44


state 51
	miembro_sentencia_ejec : asignacion miembro_sentencia_ejec .  (51)

	.  reduce 51


state 52
	miembro_sentencia_ejec : iteracion ';' .  (45)

	.  reduce 45


state 53
	miembro_sentencia_ejec : iteracion miembro_sentencia_ejec .  (52)

	.  reduce 52


state 54
	miembro_sentencia_ejec : seleccion ';' .  (46)

	.  reduce 46


state 55
	miembro_sentencia_ejec : seleccion miembro_sentencia_ejec .  (49)

	.  reduce 49


state 56
	miembro_sentencia_ejec : impresion ';' .  (47)

	.  reduce 47


state 57
	miembro_sentencia_ejec : impresion miembro_sentencia_ejec .  (53)

	.  reduce 53


state 58
	bloque_sentencias : BEGIN . sentencia_ejec END ';'  (10)

	error  shift 14
	ID  shift 15
	PRINT  shift 16
	REPEAT  shift 17
	IF  shift 18
	BREAK  shift 19
	.  error

	sentencia_ejec  goto 97
	miembro_sentencia_ejec  goto 21
	invocacion  goto 22
	asignacion  goto 23
	iteracion  goto 24
	seleccion  goto 25
	impresion  goto 26
	encabezado_iteracion  goto 27
	encabezado_if  goto 28


state 59
	iteracion : encabezado_iteracion bloque_sentencias . UNTIL condicion  (76)
	iteracion : encabezado_iteracion bloque_sentencias .  (77)

	UNTIL  shift 98
	error  reduce 77
	ID  reduce 77
	PRINT  reduce 77
	REPEAT  reduce 77
	IF  reduce 77
	BREAK  reduce 77
	';'  reduce 77


state 60
	bloque_sentencias : miembro_sentencia_ejec .  (11)

	.  reduce 11


state 61
	rama_then : THEN . bloque_sentencias  (97)
	rama_then : THEN .  (98)

	error  shift 14
	BEGIN  shift 58
	ID  shift 15
	PRINT  shift 16
	REPEAT  shift 17
	IF  shift 18
	BREAK  shift 19
	ELSE  reduce 98
	ENDIF  reduce 98

	bloque_sentencias  goto 99
	miembro_sentencia_ejec  goto 60
	invocacion  goto 22
	asignacion  goto 23
	iteracion  goto 24
	seleccion  goto 25
	impresion  goto 26
	encabezado_iteracion  goto 27
	encabezado_if  goto 28


state 62
	seleccion : encabezado_if rama_then . ENDIF  (93)
	seleccion : encabezado_if rama_then . rama_else ENDIF  (94)

	ELSE  shift 100
	ENDIF  shift 101
	.  error

	rama_else  goto 102


state 63
	lista_variables : ID ',' lista_variables .  (33)

	.  reduce 33


state 64
	nombre_func : ID .  (34)

	.  reduce 34


state 65
	declaracion : FUNC tipo_id nombre_func . params_func definicion_func ';' $$3  (25)
	declaracion : FUNC tipo_id nombre_func . params_func definicion_func ';' $$4 declaracion  (29)

	'('  shift 103
	.  error

	params_func  goto 104


state 66
	declaracion : tipo_id lista_variables ';' .  (26)
	declaracion : tipo_id lista_variables ';' . declaracion  (27)

	UINT  shift 2
	DOUBLE  shift 3
	ID  shift 5
	FUNC  shift 6
	BEGIN  reduce 26

	declaracion  goto 105
	tipo_id  goto 10
	lista_variables  goto 11


state 67
	declaracion : lista_variables ';' declaracion .  (31)

	.  reduce 31


state 68
	program : PROGRAM ID ';' $$1 . declaracion cuerpo_programa  (2)

	UINT  shift 2
	DOUBLE  shift 3
	ID  shift 5
	FUNC  shift 6
	.  error

	declaracion  goto 106
	tipo_id  goto 10
	lista_variables  goto 11


state 69
	program : PROGRAM ID ';' $$2 . cuerpo_programa  (4)

	BEGIN  shift 4
	.  error

	cuerpo_programa  goto 107


state 70
	program : PROGRAM ';' declaracion cuerpo_programa .  (5)

	.  reduce 5


state 71
	invocacion : ID . '(' ')'  (55)
	invocacion : ID . '(' ID ')'  (56)
	factor : ID .  (67)

	'('  shift 40
	error  reduce 67
	ID  reduce 67
	PRINT  reduce 67
	REPEAT  reduce 67
	THEN  reduce 67
	IF  reduce 67
	AND  reduce 67
	OR  reduce 67
	COMP_MAYOR_IGUAL  reduce 67
	COMP_MENOR_IGUAL  reduce 67
	COMP_IGUAL  reduce 67
	COMP_DISTINTO  reduce 67
	BREAK  reduce 67
	';'  reduce 67
	','  reduce 67
	')'  reduce 67
	'+'  reduce 67
	'-'  reduce 67
	'*'  reduce 67
	'/'  reduce 67
	'<'  reduce 67
	'>'  reduce 67


state 72
	factor : CTE_UINT .  (68)

	.  reduce 68


state 73
	factor : CTE_DOUBLE .  (69)

	.  reduce 69


state 74
	factor : ERR_CTE_FUERA_RANGO .  (72)

	.  reduce 72


state 75
	factor : ERR_FORMATO_CTE .  (73)

	.  reduce 73


state 76
	factor : '-' . factor  (70)

	ID  shift 71
	CTE_UINT  shift 72
	CTE_DOUBLE  shift 73
	ERR_CTE_FUERA_RANGO  shift 74
	ERR_FORMATO_CTE  shift 75
	'-'  shift 76
	.  error

	invocacion  goto 78
	factor  goto 108


state 77
	asignacion : error ASIG expresion .  (60)
	expresion : expresion . '+' termino  (61)
	expresion : expresion . '-' termino  (62)

	'+'  shift 109
	'-'  shift 110
	error  reduce 60
	ID  reduce 60
	PRINT  reduce 60
	REPEAT  reduce 60
	IF  reduce 60
	BREAK  reduce 60
	';'  reduce 60


state 78
	factor : invocacion .  (71)

	.  reduce 71


state 79
	expresion : termino .  (63)
	termino : termino . '*' factor  (64)
	termino : termino . '/' factor  (65)

	'*'  shift 111
	'/'  shift 112
	error  reduce 63
	ID  reduce 63
	PRINT  reduce 63
	REPEAT  reduce 63
	THEN  reduce 63
	IF  reduce 63
	AND  reduce 63
	OR  reduce 63
	COMP_MAYOR_IGUAL  reduce 63
	COMP_MENOR_IGUAL  reduce 63
	COMP_IGUAL  reduce 63
	COMP_DISTINTO  reduce 63
	BREAK  reduce 63
	';'  reduce 63
	','  reduce 63
	')'  reduce 63
	'+'  reduce 63
	'-'  reduce 63
	'<'  reduce 63
	'>'  reduce 63


state 80
	termino : factor .  (66)

	.  reduce 66


state 81
	asignacion : ID ASIG error .  (58)

	.  reduce 58


state 82
	asignacion : ID ASIG expresion .  (57)
	expresion : expresion . '+' termino  (61)
	expresion : expresion . '-' termino  (62)

	'+'  shift 109
	'-'  shift 110
	error  reduce 57
	ID  reduce 57
	PRINT  reduce 57
	REPEAT  reduce 57
	IF  reduce 57
	BREAK  reduce 57
	';'  reduce 57


state 83
	invocacion : ID '(' ID . ')'  (56)

	')'  shift 113
	.  error


state 84
	invocacion : ID '(' ')' .  (55)

	.  reduce 55


state 85
	impresion : PRINT '(' error . ')'  (75)

	')'  shift 114
	.  error


state 86
	impresion : PRINT '(' CADENA . ')'  (74)

	')'  shift 115
	.  error


state 87
	condicion : '(' error . ')'  (84)

	')'  shift 116
	.  error


state 88
	comparador : COMP_MAYOR_IGUAL .  (85)

	.  reduce 85


state 89
	comparador : COMP_MENOR_IGUAL .  (86)

	.  reduce 86


state 90
	comparador : COMP_IGUAL .  (89)

	.  reduce 89


state 91
	comparador : COMP_DISTINTO .  (90)

	.  reduce 90


state 92
	comparador : '<' .  (87)

	.  reduce 87


state 93
	comparador : '>' .  (88)

	.  reduce 88


state 94
	expresion : expresion . '+' termino  (61)
	expresion : expresion . '-' termino  (62)
	condicion : '(' expresion . comparador expresion ')'  (79)
	condicion : '(' expresion . comparador expresion  (80)
	condicion : '(' expresion . comparador ')'  (82)
	condicion : '(' expresion . operador_logico expresion ')'  (83)

	AND  shift 117
	OR  shift 118
	COMP_MAYOR_IGUAL  shift 88
	COMP_MENOR_IGUAL  shift 89
	COMP_IGUAL  shift 90
	COMP_DISTINTO  shift 91
	'+'  shift 109
	'-'  shift 110
	'<'  shift 92
	'>'  shift 93
	.  error

	comparador  goto 119
	operador_logico  goto 120


state 95
	condicion : '(' comparador . expresion ')'  (81)

	ID  shift 71
	CTE_UINT  shift 72
	CTE_DOUBLE  shift 73
	ERR_CTE_FUERA_RANGO  shift 74
	ERR_FORMATO_CTE  shift 75
	'-'  shift 76
	.  error

	expresion  goto 121
	invocacion  goto 78
	termino  goto 79
	factor  goto 80


state 96
	cuerpo_programa : BEGIN sentencia_ejec END ';' .  (9)

	.  reduce 9


state 97
	bloque_sentencias : BEGIN sentencia_ejec . END ';'  (10)

	END  shift 122
	.  error


state 98
	iteracion : encabezado_iteracion bloque_sentencias UNTIL . condicion  (76)

	'('  shift 42
	.  error

	condicion  goto 123


state 99
	rama_then : THEN bloque_sentencias .  (97)

	.  reduce 97


state 100
	rama_else : ELSE . bloque_sentencias  (99)
	rama_else : ELSE .  (100)

	error  shift 14
	BEGIN  shift 58
	ID  shift 15
	PRINT  shift 16
	REPEAT  shift 17
	IF  shift 18
	BREAK  shift 19
	ENDIF  reduce 100

	bloque_sentencias  goto 124
	miembro_sentencia_ejec  goto 60
	invocacion  goto 22
	asignacion  goto 23
	iteracion  goto 24
	seleccion  goto 25
	impresion  goto 26
	encabezado_iteracion  goto 27
	encabezado_if  goto 28


state 101
	seleccion : encabezado_if rama_then ENDIF .  (93)

	.  reduce 93


state 102
	seleccion : encabezado_if rama_then rama_else . ENDIF  (94)

	ENDIF  shift 125
	.  error


state 103
	params_func : '(' . param ')'  (35)
	params_func : '(' . ')'  (36)

	UINT  shift 2
	DOUBLE  shift 3
	FUNC  shift 30
	')'  shift 126
	.  error

	tipo_id  goto 127
	param  goto 128


state 104
	declaracion : FUNC tipo_id nombre_func params_func . definicion_func ';' $$3  (25)
	declaracion : FUNC tipo_id nombre_func params_func . definicion_func ';' $$4 declaracion  (29)
	definicion_func : .  (40)

	UINT  shift 2
	DOUBLE  shift 3
	BEGIN  shift 129
	ID  shift 5
	FUNC  shift 6
	';'  reduce 40

	declaracion  goto 130
	tipo_id  goto 10
	cuerpo_func  goto 131
	definicion_func  goto 132
	lista_variables  goto 11


state 105
	declaracion : tipo_id lista_variables ';' declaracion .  (27)

	.  reduce 27


state 106
	program : PROGRAM ID ';' $$1 declaracion . cuerpo_programa  (2)

	BEGIN  shift 4
	.  error

	cuerpo_programa  goto 133


state 107
	program : PROGRAM ID ';' $$2 cuerpo_programa .  (4)

	.  reduce 4


state 108
	factor : '-' factor .  (70)

	.  reduce 70


state 109
	expresion : expresion '+' . termino  (61)

	ID  shift 71
	CTE_UINT  shift 72
	CTE_DOUBLE  shift 73
	ERR_CTE_FUERA_RANGO  shift 74
	ERR_FORMATO_CTE  shift 75
	'-'  shift 76
	.  error

	invocacion  goto 78
	termino  goto 134
	factor  goto 80


state 110
	expresion : expresion '-' . termino  (62)

	ID  shift 71
	CTE_UINT  shift 72
	CTE_DOUBLE  shift 73
	ERR_CTE_FUERA_RANGO  shift 74
	ERR_FORMATO_CTE  shift 75
	'-'  shift 76
	.  error

	invocacion  goto 78
	termino  goto 135
	factor  goto 80


state 111
	termino : termino '*' . factor  (64)

	ID  shift 71
	CTE_UINT  shift 72
	CTE_DOUBLE  shift 73
	ERR_CTE_FUERA_RANGO  shift 74
	ERR_FORMATO_CTE  shift 75
	'-'  shift 76
	.  error

	invocacion  goto 78
	factor  goto 136


state 112
	termino : termino '/' . factor  (65)

	ID  shift 71
	CTE_UINT  shift 72
	CTE_DOUBLE  shift 73
	ERR_CTE_FUERA_RANGO  shift 74
	ERR_FORMATO_CTE  shift 75
	'-'  shift 76
	.  error

	invocacion  goto 78
	factor  goto 137


state 113
	invocacion : ID '(' ID ')' .  (56)

	.  reduce 56


state 114
	impresion : PRINT '(' error ')' .  (75)

	.  reduce 75


state 115
	impresion : PRINT '(' CADENA ')' .  (74)

	.  reduce 74


state 116
	condicion : '(' error ')' .  (84)

	.  reduce 84


state 117
	operador_logico : AND .  (91)

	.  reduce 91


state 118
	operador_logico : OR .  (92)

	.  reduce 92


state 119
	condicion : '(' expresion comparador . expresion ')'  (79)
	condicion : '(' expresion comparador . expresion  (80)
	condicion : '(' expresion comparador . ')'  (82)

	ID  shift 71
	CTE_UINT  shift 72
	CTE_DOUBLE  shift 73
	ERR_CTE_FUERA_RANGO  shift 74
	ERR_FORMATO_CTE  shift 75
	')'  shift 138
	'-'  shift 76
	.  error

	expresion  goto 139
	invocacion  goto 78
	termino  goto 79
	factor  goto 80


state 120
	condicion : '(' expresion operador_logico . expresion ')'  (83)

	ID  shift 71
	CTE_UINT  shift 72
	CTE_DOUBLE  shift 73
	ERR_CTE_FUERA_RANGO  shift 74
	ERR_FORMATO_CTE  shift 75
	'-'  shift 76
	.  error

	expresion  goto 140
	invocacion  goto 78
	termino  goto 79
	factor  goto 80


state 121
	expresion : expresion . '+' termino  (61)
	expresion : expresion . '-' termino  (62)
	condicion : '(' comparador expresion . ')'  (81)

	')'  shift 141
	'+'  shift 109
	'-'  shift 110
	.  error


state 122
	bloque_sentencias : BEGIN sentencia_ejec END . ';'  (10)

	';'  shift 142
	.  error


state 123
	iteracion : encabezado_iteracion bloque_sentencias UNTIL condicion .  (76)

	.  reduce 76


state 124
	rama_else : ELSE bloque_sentencias .  (99)

	.  reduce 99


state 125
	seleccion : encabezado_if rama_then rama_else ENDIF .  (94)

	.  reduce 94


state 126
	params_func : '(' ')' .  (36)

	.  reduce 36


state 127
	param : tipo_id . ID  (37)

	ID  shift 143
	.  error


state 128
	params_func : '(' param . ')'  (35)

	')'  shift 144
	.  error


state 129
	cuerpo_func : BEGIN . sentencia_ejec RETURN retorno END  (15)
	cuerpo_func : BEGIN . sentencia_ejec RETURN retorno post_condicion END  (16)
	cuerpo_func : BEGIN . sentencia_ejec RETURN END  (17)
	cuerpo_func : BEGIN . sentencia_ejec RETURN post_condicion END  (18)
	cuerpo_func : BEGIN . sentencia_ejec RETURN ';' END  (19)
	cuerpo_func : BEGIN . sentencia_ejec RETURN ';' post_condicion END  (20)

	error  shift 14
	ID  shift 15
	PRINT  shift 16
	REPEAT  shift 17
	IF  shift 18
	BREAK  shift 19
	.  error

	sentencia_ejec  goto 145
	miembro_sentencia_ejec  goto 21
	invocacion  goto 22
	asignacion  goto 23
	iteracion  goto 24
	seleccion  goto 25
	impresion  goto 26
	encabezado_iteracion  goto 27
	encabezado_if  goto 28


state 130
	definicion_func : declaracion . cuerpo_func  (38)

	BEGIN  shift 129
	.  error

	cuerpo_func  goto 146


state 131
	definicion_func : cuerpo_func .  (39)

	.  reduce 39

